# after-quant-econ

./: .gitignore  CATALOG_PLAN.md  CLAUDE.md  CONSOLIDATION_PLAN.md  GLOSSARY.md  LEARNING_PATHS.md  QUALITY_AUDIT.md  README.md  ROADMAP.md  STYLE_GUIDE.md  audit.md  plan.md  pyproject.toml  requirements.txt
_legacy/continuous-cake-eating/: run.py
_legacy/scalar-optimization-cake-eating/: run.py
agent-based-models/algorithmic-collusion-q-learning/: README.md  bullshit-detector_algorithmic-collusion-q-learning_2026-05-20.md  bullshit-detector_algorithmic-collusion-q-learning_recheck_2026-05-20.md  run.py
agent-based-models/brock-hommes-asset-pricing/: README.md  bullshit-detector_brock-hommes-asset-pricing_2026-05-20.md  bullshit-detector_brock-hommes-asset-pricing_recheck_2026-05-20.md  run.py
agent-based-models/cobweb-arifovic-ga-learning/: README.md  run.py  (+2 more)
choice/: CLAUDE.md
choice/bayesian-learning/: run.py  (+3 more)
computational-finance/: CLAUDE.md
dsge/: CLAUDE.md
dynamic-programming/: CLAUDE.md
dynare/: CLAUDE.md
game-theory/: CLAUDE.md
global-dsge/: CLAUDE.md
heterogeneous-agents/: CLAUDE.md
industrial-organization/: CLAUDE.md
lib/: brock_hommes.py  discretize.py  kalman_jax.py  output.py  perturbation.py  perturbation_jax.py
optimal-control/: CLAUDE.md
scripts/: qc_repro.py  qc_subject.py  run_tutorial_claude_sweep.py  run_tutorial_codex_queue.py  run_tutorial_fix_sweep.py  run_tutorial_proofread_sweep.py  run_tutorial_qc_queue.py  test_kalman_jax.py  test_klein_jax.py  test_nk_kalman_jax.py  validate_catalog.py
time-series/: CLAUDE.md
(+838 files in other folders)
