[project]
name = "computational-economics"
version = "1.0.0"
description = "Executable structural and computational economics examples"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "sbi>=0.23",
    "torch>=2.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
ml = ["scikit-learn", "xgboost"]
